<resources>
    <string name="app_name">LearnEnglish</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Navigation Drawer menu labels -->
    <string name="home">Home</string>
    <string name="photos">Photos</string>
    <string name="acc">Account</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="item_activity_titles">
            <item>Home</item>
            <item>Photos</item>
            <item>Movies</item>
            <item>Notifications</item>
            <item>Settings</item>
    </string-array>

        <string name="activity_title_about_us">About Us</string>
        <string name="activity_title_privacy_policy">Privacy Policy</string>
        <string name="action_clear_all">Clear All</string>
        <string name="action_logout">Logout</string>
        <string name="action_mark_all_read">Mark All as Read</string>
        <string name="privacy_policy">Privacy Policy</string>
</resources>
